--- a/Assignment/1/1_3.tex
+++ b/Assignment/1/1_3.tex
@@ -1,539 +1,156 @@
+\let\negmedspace\undefined
+\let\negthickspace\undefined
 \documentclass[journal,12pt,twocolumn]{IEEEtran}
-
-\usepackage{enumitem}
-\usepackage{amsmath}
-\usepackage{amssymb}
 \usepackage{gensymb}
-\usepackage{graphicx}
-\usepackage{txfonts}         
-\usepackage{listings}
-\usepackage{lstautogobble}
+\usepackage{amssymb}
+\usepackage[cmex10]{amsmath}
+\usepackage{amsthm}
+\usepackage[export]{adjustbox}
+\usepackage{bm}
+\usepackage{longtable}
+\usepackage{enumitem}
 \usepackage{mathtools}
-
-\newcommand{\solution}{\noindent \textbf{Solution: }}
-\providecommand{\pr}[1]{\ensuremath{\Pr\left(#1\right)}}
-\providecommand{\brak}[1]{\ensuremath{\left(#1\right)}}
-\providecommand{\cbrak}[1]{\ensuremath{\left\{#1\right\}}}
-\providecommand{\sbrak}[1]{\ensuremath{\left[#1\right]}}
-\providecommand{\mean}[1]{E\left[ #1 \right]}
-\providecommand{\var}[1]{\mathrm{Var}\left[ #1 \right]}
-\providecommand{\der}[1]{\mathrm{d} #1}
-
-\let\StandardTheFigure\thefigure
-\numberwithin{equation}{section}
-\renewcommand{\thefigure}{\theenumi}
+ \usepackage{tikz}
+\usepackage[breaklinks=true]{hyperref}
+\usepackage{listings}
+\usepackage{color}                                            %%
+\usepackage{array}                                            %%
+\usepackage{longtable}                                        %%
+\usepackage{calc}                                             %%
+\usepackage{multirow}                                         %%
+\usepackage{hhline}                                           %%
+\usepackage{ifthen}                                           %%
+\usepackage{lscape}     
+\usepackage{multicol}
+ \usepackage{enumerate}
+\DeclareMathOperator*{\Res}{Res}
 \renewcommand\thesection{\arabic{section}}
-
-\lstset {
-	frame=single, 
-	breaklines=true,
-	columns=fullflexible,
-	autogobble=true
-}             
-                               
-\title{Random Numbers \\ \Large AI1110: Probability and Random Variables \\ \large Indian Institute of Technology Hyderabad}
-\author{Ankit Saha \\ \normalsize AI21BTECH11004 \\ \vspace*{20pt} \normalsize  30 Jun 2022}
-
-
+\renewcommand\thesubsection{\thesection.\arabic{subsection}}
+\renewcommand\thesubsubsection{\thesubsection.\arabic{subsubsection}}
+\renewcommand\thesectiondis{\arabic{section}}
+\renewcommand\thesubsectiondis{\thesectiondis.\arabic{subsection}}
+\renewcommand\thesubsubsectiondis{\thesubsectiondis.\arabic{subsubsection}}
+\hyphenation{op-tical net-works semi-conduc-tor}
+\def\inputGnumericTable{}                                 %%
+\lstset{
+frame=single, 
+breaklines=true,
+columns=fullflexible
+}
 \begin{document}
+\newcommand{\BEQA}{\begin{eqnarray}}
+\newcommand{\EEQA}{\end{eqnarray}}
+\newcommand{\define}{\stackrel{\triangle}{=}}
+\newcommand*\circled[1]{\tikz[baseline=(char.base)]{
+    \node[shape=circle,draw,inner sep=2pt] (char) {#1};}}
+\bibliographystyle{IEEEtran}
+\providecommand{\mbf}{\mathbf}
+\providecommand{\pr}[1]{\ensuremath{\Pr\left(#1\right)}}
+\providecommand{\qfunc}[1]{\ensuremath{Q\left(#1\right)}}
+\providecommand{\sbrak}[1]{\ensuremath{{}\left[#1\right]}}
+\providecommand{\lsbrak}[1]{\ensuremath{{}\left[#1\right.}}
+\providecommand{\rsbrak}[1]{\ensuremath{{}\left.#1\right]}}
+\providecommand{\brak}[1]{\ensuremath{\left(#1\right)}}
+\providecommand{\lbrak}[1]{\ensuremath{\left(#1\right.}}
+\providecommand{\rbrak}[1]{\ensuremath{\left.#1\right)}}
+\providecommand{\cbrak}[1]{\ensuremath{\left\{#1\right\}}}
+\providecommand{\lcbrak}[1]{\ensuremath{\left\{#1\right.}}
+\providecommand{\rcbrak}[1]{\ensuremath{\left.#1\right\}}}
+\theoremstyle{remark}
+\newtheorem{rem}{Remark}
+\newcommand{\sgn}{\mathop{\mathrm{sgn}}}
+\providecommand{\abs}[1]{\left\vert#1\right\vert}
+\providecommand{\res}[1]{\Res\displaylimits_{#1}} 
+\providecommand{\norm}[1]{\left\lVert#1\right\rVert}
+%\providecommand{\norm}[1]{\lVert#1\rVert}
+\providecommand{\mtx}[1]{\mathbf{#1}}
+\providecommand{\mean}[1]{E\left[ #1 \right]}
+\providecommand{\fourier}{\overset{\mathcal{F}}{ \rightleftharpoons}}
+%\providecommand{\hilbert}{\overset{\mathcal{H}}{ \rightleftharpoons}}
+\providecommand{\system}{\overset{\mathcal{H}}{ \longleftrightarrow}}
+	%\newcommand{\solution}[2]{\textbf{Solution:}{#1}}
+\newcommand{\solution}{\noindent \textbf{Solution: }}
+\newcommand{\cosec}{\,\text{cosec}\,}
+\providecommand{\dec}[2]{\ensuremath{\overset{#1}{\underset{#2}{\gtrless}}}}
+\newcommand{\myvec}[1]{\ensuremath{\begin{pmatrix}#1\end{pmatrix}}}
+\newcommand{\mydet}[1]{\ensuremath{\begin{vmatrix}#1\end{vmatrix}}}
+\newcommand*{\permcomb}[4][0mu]{{{}^{#3}\mkern#1#2_{#4}}}
+\newcommand*{\perm}[1][-3mu]{\permcomb[#1]{P}}
+\newcommand*{\comb}[1][-1mu]{\permcomb[#1]{C}}
+%\numberwithin{equation}{subsection}
+\makeatletter
+\@addtoreset{figure}{problem}
+\makeatother
+\let\StandardTheFigure\thefigure
+\let\vec\mathbf
+%\renewcommand{\thefigure}{\theproblem}
+\def\putbox#1#2#3{\makebox[0in][l]{\makebox[#1][l]{}\raisebox{\baselineskip}[0in][0in]{\raisebox{#2}[0in][0in]{#3}}}}
+     \def\rightbox#1{\makebox[0in][r]{#1}}
+     \def\centbox#1{\makebox[0in]{#1}}
+     \def\topbox#1{\raisebox{-\baselineskip}[0in][0in]{#1}}
+     \def\midbox#1{\raisebox{-0.5\baselineskip}[0in][0in]{#1}}
+\vspace{3cm}
+\title{Assignment}
+\author{Anshul Sangrame\\CS21BTECH11004
+	\thanks{}
+}
 
-	\maketitle
-	
-	\section{Uniform Random Numbers}
-	Let $U$ be a uniform random variable between 0 and 1.
-	\begin{enumerate}[label=\thesection.\arabic*,ref=\thesection.\theenumi]
-	\item Generate $10^6$ samples of $U$ using a C program and save into a file called uni.dat
+% make the title area
+\maketitle
 
-	\solution Download the C source code by executing the following commands
-	\begin{lstlisting}
-		wget https://github.com/Ankit-Saha-2003/AI1110/raw/main/Random-Numbers/codes/1.1.c
-		wget https://github.com/Ankit-Saha-2003/AI1110/raw/main/Random-Numbers/codes/header.h
-	\end{lstlisting}
-	Compile and run the C program by executing the following
-	\begin{lstlisting}
-		cc -lm 1.1.c
-		./a.out
-	\end{lstlisting}
-	
-	\item Load the uni.dat file into Python and plot the empirical CDF of $U$ using the samples in uni.dat. The CDF is defined as
-	\begin{align}
-		F_{U}(x) = \pr{U \le x}
-	\end{align}
+\newpage
 
-	\solution  Download the following Python code that plots Fig. \ref{fig-1.2}
-	\begin{lstlisting}
-		wget https://github.com/Ankit-Saha-2003/AI1110/raw/main/Random-Numbers/codes/1.2.py
-	\end{lstlisting}
-	Run the code by executing
-	\begin{lstlisting}
-		python 1.2.py
-	\end{lstlisting}
-	\begin{figure}
-		\centering
-		\includegraphics[width=\columnwidth]{./figs/1.2.png}
-		\caption{The CDF of $U$}
-		\label{fig-1.2}
-	\end{figure}
-	
-	\item Find a  theoretical expression for $F_{U}(x)$
-	
-	\solution The PDF of $U$ is given by
-	\begin{align}
-		p_{U}(x) = 
-		\begin{cases}
-			1 & x \in [0, 1] \\
-			0 & \text{otherwise}
-		\end{cases}
-	\end{align}
-	
-	The CDF of $U$ is given by
-	\begin{align}
-		F_{U}(x) = \pr{U \le x} = \int_{-\infty}^x p_{U}(x) ~\mathrm{d}x
-	\end{align}
-	
-	If $x<0$,
-	\begin{align}
-		\int_{-\infty}^x p_{U}(x) ~\mathrm{d}x = \int_{-\infty}^x 0 ~\mathrm{d}x = 0
-	\end{align}
-	
-	If $c$,
-	\begin{align}
-		\int_{-\infty}^x p_{U}(x) ~\mathrm{d}x &= \int_{-\infty}^0 0 ~\mathrm{d}x + \int_0^x 1 ~\mathrm{d}x \\
-		&= 0 + x \\
-		&= x
-	\end{align}
-	
-	If $x>1$,
-	\begin{multline}
-		\int_{-\infty}^x p_{U}(x) ~\mathrm{d}x \\= \int_{-\infty}^0 0 ~\mathrm{d}x + \int_0^1 1 ~\mathrm{d}x +  \int_1^x 0 ~\mathrm{d}x 
-	\end{multline}
-	\begin{align}
-		\int_{-\infty}^x p_{U}(x) ~\mathrm{d}x &= 0 + 1 + 0 \\
-		&= 1
-	\end{align}
-	
-	Therefore, we obtain the CDF of $U$ as
-	\begin{align}
-		F_{U}(x) = 
-		\begin{cases}
-			0 & x < 0 \\
-			x & 0 \le x \le 1 \\
-			1 & x > 1
-		\end{cases}
-	\end{align}
-	
-	\item The mean of $U$ is defined as
-	\begin{align}
-		\mean{U} = \frac{1}{N}\sum_{i=1}^{N}U_i
-	\end{align}
-	and its variance as
-	\begin{align}
-		\var{U} = \mean{U- \mean{U}}^2 
-	\end{align}
-	Write a C program to  find the mean and variance of $U$
-	
-	\solution Download the C source code by executing the following commands
-	\begin{lstlisting}
-		wget https://github.com/Ankit-Saha-2003/AI1110/raw/main/Random-Numbers/codes/1.4.c
-		wget https://github.com/Ankit-Saha-2003/AI1110/raw/main/Random-Numbers/codes/header.h
-	\end{lstlisting}
-	Compile and run the C program by executing the following
-	\begin{lstlisting}
-		cc -lm 1.4.c
-		./a.out
-	\end{lstlisting}
-	The output of the code is
-	\begin{align}
-		\mu_{\text{emp}} &= 0.500007 \\
-		\mu_{\text{the}} &= 0.500000 \\
-		\sigma_{\text{emp}}^2 &= 0.083301 \\
-		\sigma_{\text{the}}^2 &= 0.083333
-	\end{align}
-	
-	\item Verify your result theoretically given that
-	\begin{align}
-		\mean{U^k} = \int_{-\infty}^{\infty}x^k \mathrm{d}F_{U}(x)
-	\end{align}
-		
-	\solution The mean of $U$ is given by
-	\begin{align}
-		\mean{U} = \int_{-\infty}^{\infty}x ~\mathrm{d}F_{U}(x) 
-	\end{align}
-	On differentiating the CDF of $U$, we get
-	\begin{align}
-		\mathrm{d}F_{U}(x) = 
-		\begin{cases}
-			0 & x < 0 \\
-			\mathrm{d}x & 0 \le x \le 1 \\
-			0 & x > 1
-		\end{cases}
-	\end{align}
-	\begin{align}
-		\therefore \mean{U} = \int_{0}^{1}x ~\mathrm{d}x = \frac12 = 0.5
-	\end{align}
-	
-	Similarly,
-	\begin{align}
-		\therefore \mean{U^2} = \int_{0}^{1}x^2 ~\mathrm{d}x = \frac13
-	\end{align}
-	Now, the variance of $U$ is given by
-	\begin{align}
-		&\var{U} \\
-		&= \mean{U- \mean{U}}^2 \\
-		&= \mean{U^2 - 2U\mean{U} + (\mean{U})^2}
-	\end{align}
-	By linearity of expectation, we have
-	\begin{align}
-		&\mean{U^2} + \mean{-2U\mean{U}} + \mean{(\mean{U})^2} \\
-		&= \mean{U^2} -2\mean{U}\mean{U} + (\mean{U})^2 \\
-		&= \mean{U^2} - (\mean{U})^2 \\
-		&= \frac13 - \brak{\frac12}^2 \\
-		&= \frac{1}{12} \approx 0.083333
-	\end{align}
-	
-	\end{enumerate}
-	
-	\section{Central Limit Theorem}
+%\tableofcontents
 
-	\begin{enumerate}[label=\thesection.\arabic*,ref=\thesection.\theenumi]
-	\item Generate $10^6$ samples of the random variable
-	\begin{align}
-		X = \sum_{i=1}^{12}U_i -6
-	\end{align}
+\bigskip
 
-	using a C program, where $U_i, i = 1,2,\dots, 12$ are  a set of independent uniform random variables between 0 and 1 and save in a file called gau.dat
-	
-	\solution Download the C source code by executing the following commands
-	\begin{lstlisting}
-		wget https://github.com/Ankit-Saha-2003/AI1110/raw/main/Random-Numbers/codes/2.1.c
-		wget https://github.com/Ankit-Saha-2003/AI1110/raw/main/Random-Numbers/codes/header.h
-	\end{lstlisting}
-	Compile and run the C program by executing the following
-	\begin{lstlisting}
-		cc -lm 2.1.c
-		./a.out
-	\end{lstlisting}
-		
-	\item Load gau.dat in Python and plot the empirical CDF of $X$ using the samples in gau.dat. What properties does a CDF have?
+%\renewcommand{\thefigure}{\theenumi}
+%\renewcommand{\thetable}{\theenumi}
+%\renewcommand{\theequation}{\theenumi}
 
-	\solution Download the following Python code that plots Fig. \ref{fig-2.2}
-	\begin{lstlisting}
-		wget https://github.com/Ankit-Saha-2003/AI1110/raw/main/Random-Numbers/codes/2.2.py
-	\end{lstlisting}
-	Run the code by executing
-	\begin{lstlisting}
-		python 2.2.py
-	\end{lstlisting}
-	\begin{figure}
-		\centering
-		\includegraphics[width=\columnwidth]{./figs/2.2.png}
-		\caption{The CDF of $X$}
-		\label{fig-2.2}
-	\end{figure}
+\textbf{1.3: } Find a theoretical expression for $F_U(x)$.
+	\solution
 	
-	Every CDF is monotone increasing and right-continuous. Furthermore,
-	\begin{align}
-		\lim_{x \to -\infty} F_{X}(x) = 0 \qquad \lim_{x \to \infty} F_{X}(x) = 1
-	\end{align}
-	Thus, every CDF is bounded between $0$ and $1$ and hence, convergent.
-	
-	In this case, the CDF is also left-continuous. Therefore, $X$ is a continuous random variable.
-	
-	\item Load gau.dat in Python and plot the empirical PDF of $X$ using the samples in gau.dat. The PDF of $X$ is defined as
-	\begin{align}
-		p_{X}(x) = \frac{\der{}}{\der{x}}F_{X}(x)
-	\end{align}
-	What properties does the PDF have?
-	
-	\solution Download the following Python code that plots Fig. \ref{fig-2.2}
-	\begin{lstlisting}
-		wget https://github.com/Ankit-Saha-2003/AI1110/raw/main/Random-Numbers/codes/2.3.py
-	\end{lstlisting}
-	Run the code by executing
-	\begin{lstlisting}
-		python 2.3.py
-	\end{lstlisting}
-	\begin{figure}
-		\centering
-		\includegraphics[width=\columnwidth]{./figs/2.3.png}
-		\caption{The PDF of $X$}
-		\label{fig-2.3}
-	\end{figure}
-	
-	Every PDF is bounded between $0$ and $1$ and
-	\begin{align}
-		\int_{-\infty}^{\infty} p_{X}(x) ~\mathrm{d}x = 1
-	\end{align}
-	
-	In this case, the PDF is symmetric about $x = 0$
-	
-	\item Find the mean and variance of $X$ by writing a C program
-	
-	\solution Download the C source code by executing the following commands
-	\begin{lstlisting}
-		wget https://github.com/Ankit-Saha-2003/AI1110/raw/main/Random-Numbers/codes/2.4.c
-		wget https://github.com/Ankit-Saha-2003/AI1110/raw/main/Random-Numbers/codes/header.h
-	\end{lstlisting}
-	Compile and run the C program by executing the following
-	\begin{lstlisting}
-		cc -lm 2.4.c
-		./a.out
-	\end{lstlisting}
-	The output of the code is
-	\begin{align}
-		\mu_{\text{emp}} &= 0.000294 \\
-		\mu_{\text{the}} &= 0.000000 \\
-		\sigma_{\text{emp}}^2 &= 0.999560 \\
-		\sigma_{\text{the}}^2 &= 1.000000
-	\end{align}	
-	
-	\item Given that 
-	\begin{align}
-		p_{X}(x) = \frac{1}{\sqrt{2\pi}}\exp\brak{-\frac{x^2}{2}}, -\infty < x < \infty,
-	\end{align}
-	repeat the above exercise theoretically
-	
-	\solution The mean of $X$ is given by
-	\begin{align}
-		\mean{X} &= \int_{-\infty}^{\infty} x p_{X}(x) \mathrm{d}x \\
-		&= \int_{-\infty}^{\infty} \frac{x}{\sqrt{2\pi}}\exp\brak{-\frac{x^2}{2}} \mathrm{d}x 
-	\end{align}
-	Now, let
-	\begin{align} 
-		g(x) &= \dfrac{x}{\sqrt{2\pi}}\exp\brak{-\frac{x^2}{2}} \\
-		\implies g(-x) &= \dfrac{-x}{\sqrt{2\pi}}\exp\brak{-\frac{(-x)^2}{2}} \\
-		&= - \dfrac{x}{\sqrt{2\pi}}\exp\brak{-\frac{x^2}{2}} \\
-		&= - g(x)
-	\end{align}
-	Thus, $g(x)$ is an odd function 
-	\begin{align}
-		\therefore \mean{X} &= \int_{-\infty}^{\infty} g(x) \mathrm{d}x = 0
-	\end{align}
-	
-	Now, 
-	\begin{align}
-		\mean{X^2} &= \int_{-\infty}^{\infty} x^2 p_{X}(x) \mathrm{d}x \\
-		&= \int_{-\infty}^{\infty} \frac{x^2}{\sqrt{2\pi}}\exp\brak{-\frac{x^2}{2}} \mathrm{d}x \\
-		&= 2 \int_{0}^{\infty} \frac{x^2}{\sqrt{2\pi}}\exp\brak{-\frac{x^2}{2}} \mathrm{d}x
-	\end{align}
-	since $\frac{x^2}{\sqrt{2\pi}}\exp\brak{-\frac{x^2}{2}}$ is an even function
-	
-	Using integration by parts,
-	\begin{align}
-		\mean{X^2} = \sqrt{\frac{2}{\pi}}  \int_{0}^{\infty} x \cdot x \exp\brak{-\frac{x^2}{2}} \der{x} 
-	\end{align}
-	\begin{multline}
-		= \sqrt{\frac{2}{\pi}} \brak{\left. x \int x \exp\brak{-\frac{x^2}{2}} \der{x}}\right|_0^{\infty} \\- \sqrt{\frac{2}{\pi}}  \int_{0}^{\infty} 1 \cdot \int x \exp\brak{-\frac{x^2}{2}} \der{x}
-	\end{multline}
-	
-	Substitute $t = \frac{x^2}{2} \implies \der{t} = x\der{x}$
-	\begin{align}
-		\int x \exp\brak{-\frac{x^2}{2}} \der{x} &= \int \exp(-t) \der{t} \\
-		&= - \exp(-t) \\
-		&= - \exp\brak{-\frac{x^2}{2}}
-	\end{align}
-	Now,
-	\begin{align}
-		\left. -x \exp\brak{-\frac{x^2}{2}} \right|_0^{\infty} = 0 - 0 = 0 \\
-		\because \lim_{x\to\infty} x \exp\brak{-\frac{x^2}{2}} = \lim_{x\to\infty} \frac{x}{\exp\brak{\frac{x^2}{2}}} =0
-	\end{align}
-	as exponential function grows much faster than a polynomial function
-	
-	Also, 
-	\begin{align}
-		&\int_0^{\infty} - \exp\brak{-\frac{x^2}{2}} \der{x} \\
-		\xleftrightarrow{x = t\sqrt{2}} &\int_0^{\infty} -\exp(-t^2) \der{t}\sqrt{2} \\
-		&= -{\sqrt{2}} \int_0^{\infty} \exp(-t^2) \der{t} \\
-		&= -{\sqrt{2}} \frac{\sqrt{\pi}}{2} \\
-		&= - \sqrt{\frac{\pi}{2}}
-	\end{align}
-	
-	Therefore,
-	\begin{align}
-		\mean{X^2} &= 0 - \sqrt{\frac{2}{\pi}} \brak{- \sqrt{\frac{\pi}{2}}} \\
-		&= 1 \\
-		\therefore \var{X} &= \mean{X^2} - \brak{\mean{X}}^2 \\
-		&= 1 - 0 \\
-		&= 1
-	\end{align}
-	\end{enumerate}
-	
-	\section{From Uniform to Other}
-	\begin{enumerate}[label=\thesection.\arabic*,ref=\thesection.\theenumi]
-	\item Generate samples of 
-	\begin{align}
-		V = -2\ln\brak{1-U}
-	\end{align}
-	and plot its CDF
-	
-	\solution Download the C source code by executing the following commands
-	\begin{lstlisting}
-		wget https://github.com/Ankit-Saha-2003/AI1110/raw/main/Random-Numbers/codes/3.1.c
-	\end{lstlisting}
-	Compile and run the C program by executing the following
-	\begin{lstlisting}
-		cc -lm 3.1.c
-		./a.out
-	\end{lstlisting}
-	Download the following Python code that plots Fig. \ref{fig-3.1}
-	\begin{lstlisting}
-		wget https://github.com/Ankit-Saha-2003/AI1110/raw/main/Random-Numbers/codes/3.1.py
-	\end{lstlisting}
-	Run the code by executing
-	\begin{lstlisting}
-		python 3.1.py
-	\end{lstlisting}
-	\begin{figure}
-		\centering
-		\includegraphics[width=\columnwidth]{./figs/3.1.png}
-		\caption{The CDF of $V$}
-		\label{fig-3.1}
-	\end{figure}	
-	
-	\item Find a theoretical expression for $F_V(x)$
-	
-	\solution We have
-	\begin{align}
-		F_V(x) &= \pr{V \le x} \\
-		&= \pr{-2\ln\brak{1-U} \le x} \\
-		&= \pr{\ln\brak{1-U} \ge -\frac{x}{2}} \\
-		&= \pr{1-U \ge \exp\brak{-\frac{x}{2}}} \\
-		&= \pr{U \le 1 - \exp\brak{-\frac{x}{2}}} \\
-		&= F_U\brak{1 - \exp\brak{-\frac{x}{2}}}
-	\end{align}
-	Now,
-	\begin{align}
-		0 \le 1-\exp\brak{-\frac{x}{2}} &< 1 \qquad \text{if } x \ge 0	\\	
-		1-\exp\brak{-\frac{x}{2}} &< 0 \qquad \text{if } x < 0	
-	\end{align}
-	
-	Therefore,
-	\begin{align}
-		F_V(x) = 
-		\begin{cases}
-			1-\exp\brak{-\dfrac{x}{2}} & x \ge 0 \\
-			0 & x < 0
-		\end{cases}
-	\end{align}
-	
-	\end{enumerate}
-	
-	\section{Triangular Distribution}
-	\begin{enumerate}[label=\thesection.\arabic*,ref=\thesection.\theenumi]
-	\item Generate 
-	\begin{align}
-		T = U_1+U_2
-	\end{align}
-	\solution Download the C source code by executing the following commands
-	\begin{lstlisting}
-		wget https://github.com/Ankit-Saha-2003/AI1110/raw/main/Random-Numbers/codes/4.1.c
-	\end{lstlisting}
-	Compile and run the C program by executing the following
-	\begin{lstlisting}
-		cc -lm 4.1.c
-		./a.out
-	\end{lstlisting}
-	
-	\item Find the CDF of $T$
-	
-	\solution The CDF of $T$ is given by
-	\begin{align}
-		F_T(t) = \pr{T \le t} = \pr{U_1 + U_2 \le t}	
-	\end{align}		
-	Since $U_1, U_2 \in [0,1] \implies U_1 + U_2 \in [0,2]$
-	Therefore, if $t \ge 2$, then $U_1 + U_2 \le t$ is always true and if $t < 0$, then $U_1 + U_2 \le t$ is always false.
-	
-	Now, fix the value of $U_1$ to be some $x$
-	\begin{align}
-		x + U_2 \le t \implies U_2 \le t - x
-	\end{align}
-	
-	If $0 \le t \le 1$, then $x$ can take all values in $[0,t]$
-	\begin{align}
-		F_T(t)	&= \int_0^t \pr{U_2 \le t - x} p_{U_1}(x) \der{x} \\
-		&= \int_0^t F_{U_2}(t-x) p_{U_1}(x) \der{x}
-	\end{align}
-	\begin{align}
-		0 \le x \le t &\implies 0 \le t - x \le t \le 1 \\
-		&\implies F_{U_2}(t-x) = t - x
-	\end{align}
-	\begin{align}
-		F_T(t) &= \int_0^t (t-x) \cdot 1 \cdot \der{x} \\
-		&= \left. tx - \frac{x^2}{2} \right|_0^t \\
-		&= \frac{t^2}{2}
-	\end{align}
-	
-	If $1 < t < 2$, $x$ can only take values in $[0,1]$ as $U_1 \le 1$
-	\begin{align}
-		F_T(t)	&= \int_0^1 F_{U_2}(t-x) \cdot 1 \cdot \der{x} 
-	\end{align}
-	\begin{align}
-		0 \le x \le t - 1 &\implies 1 \le t - x \le t \\
-		t - 1 \le x \le 1 &\implies 0 < t - 1 \le t - x \le 1
-	\end{align}
-	\begin{align}
-		F_T(t) &= \int_0^{t-1} 1 \der{x} + \int_{t-1}^1 (t-x)\der{x} \\
-		&= t - 1 + t(1 - (t - 1)) - \frac{1}{2} + \frac{(t-1)^2}{2} \\
-		&= t - 1 + 2t - t^2 -\frac{1}{2} + \frac{t^2}{2} + \frac{1}{2} - t \\ 
-		&= -\frac{t^2}{2} + 2t - 1
-	\end{align}
-	
-	Therefore,
-	\begin{align}
-		F_T(t) = 
-		\begin{cases}
-		0 & t < 0 \\
-		\dfrac{t^2}{2} & 0 \le t \le 1 \\
-		 2t -\dfrac{t^2}{2} - 1 & 1 < t < 2 \\
-		1 & t \ge 2
-		\end{cases}
-	\end{align}
-	
-	\begin{figure}
-		\centering
-		\includegraphics[width=\columnwidth]{./figs/4.2.png}
-		\caption{The CDF of $T$}
-		\label{fig-4.2}
-	\end{figure}	
-	
-	\item Find the PDF of $T$
-	
-	\solution The PDF of $T$ is given by
-	\begin{align}
-		p_T(t) &= \frac{\der{}}{\der{t}} F_T(t) \\
-		\therefore p_T(t) &=
-		\begin{cases}
-			0 & t < 0 \\
-			t & 0 \le t \le 1 \\
-			2 - t & 1 < t < 2 \\
-			0 & t \ge 2
-		\end{cases}
-	\end{align}
-	
-	\begin{figure}
-		\centering
-		\includegraphics[width=\columnwidth]{./figs/4.3.png}
-		\caption{The PDF of $T$}
-		\label{fig-4.3}
-	\end{figure}		
-	
-	\item Find the theoretical expressions for the PDF and CDF of $T$
-	
-	\solution The theoretical expressions for the CDF and PDF have been found in problems 4.2 and 4.3 respectively
+Pdf of Uniform distribution between [0,1] is given by,
+\begin{align}
+    f_U(x) = \begin{cases}
+        1, & x \in [0,1] \\
+        0, & \text{otherwise}
+    \end{cases}
+\end{align}
 
-	\item Verify your results through a plot
-	
-	\solution Download the following Python codes that plot Fig. \ref{fig-4.2} and Fig. \ref{fig-4.3}
-	\begin{lstlisting}
-		wget https://github.com/Ankit-Saha-2003/AI1110/raw/main/Random-Numbers/codes/4.2.py
-		wget https://github.com/Ankit-Saha-2003/AI1110/raw/main/Random-Numbers/codes/4.3.py
-	\end{lstlisting}
-	Run the codes by executing
-	\begin{lstlisting}
-		python 4.2.py
-		python 4.3.py
-	\end{lstlisting}
-	
-	
-	\end{enumerate}
+\begin{align}
+    F_U(x) = \int_{-\infty}^{x} f_U(x) dx
+\end{align}
+
+Case-1: x $<$ 0,
+
+\begin{align}
+    F_U(x) &= \int_{-\infty}^{x} 0 dx \\
+    &= 0
+\end{align}
+
+Case-2: x $\in$ [0,1],
+
+\begin{align}
+    F_U(x) &= \int_{-\infty}^{0} 0 dx + \int_{0}^{x} 1 dx\\
+    &= x
+\end{align}\
+
+Case-3: x $>$ 1,
+
+\begin{align}
+    F_U(x) &= \int_{-\infty}^{0} 0 dx + \int_{0}^{1} 1 dx + \int_{1}^{x} 0 dx\\
+    &= 1
+\end{align}
+
+Hence,
+\begin{align}
+    F_U(x) = \begin{cases}
+    0, & x < 0 \\
+    x, & x \in [0,1] \\
+    1, & x > 1
+    \end{cases}
+\end{align}
+
 \end{document}
