--- a/Assignment/solution/main.tex
+++ b/Assignment/solution/main.tex
@@ -604,5 +604,37 @@ The PDF of $T$ is given by
 			0 & t \ge 2
 		\end{cases}
 	\end{align}
+	
+\textbf{4.5: }Verify your results through a plot
+
+	\solution
+	
+Download the following files,
+\begin{lstlisting}
+wget https://github.com/Anshul-Sangrame/AI1110/blob/main/Assignment/solution/4/4_5_1.py
+wget https://github.com/Anshul-Sangrame/AI1110/blob/main/Assignment/solution/4/4_5_2.py
+\end{lstlisting}
+
+Execute the above files using code,
+\begin{lstlisting}
+python3 4_5_1.py
+python3 4_5_2.py
+\end{lstlisting}
+
+Plot \ref{fig:4.5.1} is obtained is pdf
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=\columnwidth]{./figs/tri_pdf.pdf}
+    \caption{}
+    \label{fig:4.5.1}
+\end{figure}
+
+Plot \ref{fig:4.5.2} is obtained is cdf
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=\columnwidth]{./figs/tri_cdf.pdf}
+    \caption{}
+    \label{fig:4.5.2}
+\end{figure}
 
 \end{document}
