--- a/Assignment/solution/report/main.tex
+++ b/Assignment/solution/report/main.tex
@@ -753,7 +753,96 @@ Plot \ref{fig:4.5.2} is obtained is cdf
 ,ref=\thesection.\theenumi]
 %
 \item Generate equiprobable $X \in \cbrak{1, -1}$.
+
+\solution
+
+Download the following files,
+\begin{lstlisting}
+wget https://github.com/Anshul-Sangrame/AI1110/blob/main/Assignment/solution/5/5.1.c
+wget https://github.com/Anshul-Sangrame/AI1110/blob/main/Assignment/solution/coeffs.h
+\end{lstlisting}
+Execute the above files using code,
+\begin{lstlisting}
+gcc 5.1.c -lm
+./a.out
+\end{lstlisting}
 %
+\item Generate 
+	\begin{align}
+		Y = AX + N
+	\end{align}
+where $A  = 5 \text{ dB}, X \in \cbrak{1, -1}$ is Bernoulli and $N \sim \gauss{0}{1}$.
+
+\solution
+
+Download the following files,
+\begin{lstlisting}
+wget https://github.com/Anshul-Sangrame/AI1110/blob/main/Assignment/solution/5/5.2.c
+wget https://github.com/Anshul-Sangrame/AI1110/blob/main/Assignment/solution/coeffs.h
+\end{lstlisting}
+Execute the above files using code,
+\begin{lstlisting}
+gcc 5.2.c -lm
+./a.out
+\end{lstlisting}
+%
+\item Plot Y using a scatter plot.
+
+\solution
+
+Download the following files,
+\begin{lstlisting}
+wget https://github.com/Anshul-Sangrame/AI1110/blob/main/Assignment/solution/5/5.3.py
+\end{lstlisting}
+Execute the above files using code,
+\begin{lstlisting}
+python3 5.3.py
+\end{lstlisting}
+Plot \ref{fig:5.2} is obtained
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=\columnwidth]{../figs/5_2.pdf}
+    \caption{}
+    \label{fig:5.2}
+\end{figure}
+%
+\item Guess how to estimate $X$ from $Y$.
+
+\solution
+
+From the plot of $Y$, we see that the estimate model can be written as
+\begin{align}
+	\hat{X} = 
+	\begin{cases}
+		1 & Y > 0 \\
+		0 & Y < 0
+	\end{cases}
+\end{align}
+%
+\item Find 
+	\begin{align}
+		P_{e|0} = \pr{\hat{X} = -1|X = 1}
+	\end{align}
+and
+	\begin{align}
+		P_{e|1} = \pr{\hat{X} = 1|X = -1}
+	\end{align}
+	
+\solution
+
+Letting $X = 1$ and $X = -1$ respectively, we see the number of mismatched data points to compute the error probabilities. The simulation is coded in
+\begin{lstlisting}
+$ wget https://raw.githubusercontent.com/goats-9/ai1110-assignments/master/manual/codes/5_4.py
+\end{lstlisting}
+and can be run by typing
+\begin{lstlisting}
+$ python3 5_4.py
+\end{lstlisting}
+The results are
+		\begin{align}
+			P_{e|0} = 5.02 \times 10^{-4} \\
+			P_{e|1} = 5.24 \times 10^{-4}
+		\end{align}
 \end{enumerate}
 %
 \end{document}
