--- a/Assignment/solution/report/main.tex
+++ b/Assignment/solution/report/main.tex
@@ -921,6 +921,11 @@ To minimise $P_e$, we differentiate the above equation wrt $\delta$:
 (\delta - A)^2 &= (\delta + A)^2 \\
 \implies \delta &= 0
 \end{align}
+%
+\item Repeat the above exercise when
+\begin{align*}
+	p_x(0) = p
+\end{align*}
 \end{enumerate}
 %
 \end{document}
