--- a/Assignment/solution/report/main.tex
+++ b/Assignment/solution/report/main.tex
@@ -1066,6 +1066,77 @@ Plot \ref{fig:6.1.pdf} is PDF
     \label{fig:6.1.pdf}
 \end{figure}
 %
+\item If
+\begin{align}
+	F_V(x) = 
+	\begin{cases}
+		1 - e^{-\alpha x} & x \geq 0 \\
+		0 & x < 0
+	\end{cases}
+\end{align}
+find $\alpha$.
+
+\solution
+
+From \eqref{eq:chi-cdf}, $\alpha = 0.5$ 
+%
+\item Plot the CDF and PDF of 
+\begin{align}
+	A = \sqrt{V}
+\end{align}
+
+\solution
+
+For $x \geq 0$,
+\begin{align}
+	F_A(x) &= \pr{A \leq x}\\
+	F_A(x) &= \pr{\sqrt{V} \leq x}\\
+	F_A(x) &= \pr{V \leq x^2} \\
+	F_A(x) &= F_V(x^2)
+\end{align}
+From equation \eqref{eq:chi-cdf},
+\begin{align}
+	F_A(x) &= \begin{cases}
+		0, & x < 0 \\
+		1-e^{x^2/2}, & x \geq 0 \\
+	\end{cases} \label{eq:ral-cdf} \\
+	p_A(x) &= \frac{d F_V(x)}{dx}\\
+	&= \begin{cases}
+		0, & x < 0 \\
+		xe^{-\frac{x^2}{2}}, & x \geq 0 \\
+	\end{cases} \label{eq:ral-pdf}
+\end{align}
+
+Download the following files to verify the plot,
+\begin{lstlisting}
+wget https://github.com/Anshul-Sangrame/AI1110/blob/main/Assignment/solution/6/6.1.c
+wget https://github.com/Anshul-Sangrame/AI1110/blob/main/Assignment/solution/coeffs.h
+wget https://github.com/Anshul-Sangrame/AI1110/blob/main/Assignment/solution/6/6.1.cdf.py
+wget https://github.com/Anshul-Sangrame/AI1110/blob/main/Assignment/solution/6/6.1.pdf.py
+\end{lstlisting}
+Execute the programs using the code in terminal,
+\begin{lstlisting}
+gcc 6.1.c -lm
+./a.out
+python3 6.1.cdf.py
+python3 6.1.pdf.py
+\end{lstlisting}
+Plot \ref{fig:6.1.cdf} is CDF
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=\columnwidth]{../figs/chi_cdf.pdf}
+    \caption{}
+    \label{fig:6.1.cdf}
+\end{figure}
+
+Plot \ref{fig:6.1.pdf} is PDF
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=\columnwidth]{../figs/chi_pdf.pdf}
+    \caption{}
+    \label{fig:6.1.pdf}
+\end{figure}
+%
 \end{enumerate}
 %
 \end{document}
