--- a/Assignment/solution/report/main.tex
+++ b/Assignment/solution/report/main.tex
@@ -1153,7 +1153,42 @@ for
 	Y = AX + N
 \end{align}
 where $A$ is Rayleigh with $E\sbrak{A^2} = \gamma,\ N \sim \gauss{0}{1},\ X \in \cbrak{1, -1}$ for $0 \leq \gamma \leq 10 \text{ dB}$.
+
+\solution
+
 %
+\item Assuming that $N$ is a constant, find an expression for $P_e$. Call this $P_e(N)$.
+
+\solution
+
+We rewrite the previous expression for $P_e$ as
+\begin{align}
+	P_e(N) &=  \pr{Y<0|X=1}\\
+	&= \pr{A < -N} = F_A(-N) \\
+	&= 
+	\begin{cases}
+		1 - e^{-\frac{N^2}{\gamma}} & N \leq 0 \\
+		0 & N > 0
+	\end{cases}
+\end{align}
+%
+\item For a function $g$,
+	\begin{align}
+		E\sbrak{g(X)} = \int_{-\infty}^{\infty}g(x)p_X(x)dx
+	\end{align}
+Find $P_e = E\sbrak{P_e(N)}$.
+
+\solution
+
+We write,
+		\begin{align}
+			P_e &= \int_{0}^{\infty}F_A(x)f_N(x)dx \\
+			&= \int_{0}^{\infty}(1 - e^{-\frac{x^2}{\gamma}})\frac{1}{\sqrt{2\pi}}e^{-\frac{x^2}{2}}dx \\
+			&= \frac{1}{2} - \frac{1}{\sqrt{2\pi}}\int_{0}^{\infty}\exp{\brak{-x^2\cbrak{\frac{\gamma+2}{2\gamma}}}}dx \\
+			&= \frac{1}{2}\brak{1 - \sqrt{\frac{\gamma}{\gamma + 2}}}
+			\label{eq:exp-err-ral}
+		\end{align}
+Where $f_N$ denotes PDF of standard normal distribution. 
 \end{enumerate}
 %
 \end{document}
