--- a/Assignment/solution/report/main.tex
+++ b/Assignment/solution/report/main.tex
@@ -1216,6 +1216,13 @@ We write,
 			\label{eq:exp-err-ral}
 		\end{align}
 Where $f_N$ denotes PDF of standard normal distribution. 
+%
+\item Plot $P_e$ in problems 7.1 and 7.3 on the same graph wrt $\gamma$. Comment.
+
+\solution
+
+Refer figure \ref{fig:7.1} for graph in rectangular axis and figure \ref{fig:7.1_semilog} for graph in semilog axis. $P_e$ is only dependent on $\gamma$
+
 \end{enumerate}
 %
 \end{document}
