--- a/Assignment/solution/report/main.tex
+++ b/Assignment/solution/report/main.tex
@@ -894,7 +894,7 @@ Plot \ref{fig:5.7_semilog} obtained in semilog-y axis
     \label{fig:5.7_semilog}
 \end{figure}
 %
-\item Now, consider a threshold $\delta$ while estimating $X$ from $Y$. Find the value of $\delta$ that maximizes the theoretical $P_e$.
+\item Now, consider a threshold $\delta$ while estimating $X$ from $Y$. Find the value of $\delta$ that minimizes the theoretical $P_e$.
 
 \solution
 
@@ -924,7 +924,7 @@ To minimise $P_e$, we differentiate the above equation wrt $\delta$:
 %
 \item Repeat the above exercise when
 \begin{align*}
-	p_x(0) = p
+	p_x(-1) = p
 \end{align*}
 
 \solution
